<resources>
    <string name="app_name">全国汽车票</string>
    <string name="main_activity_main_menu">购票</string>
    <string name="main_activity_active_menu">活动</string>
    <string name="main_activity_order_menu">订单</string>
    <string name="main_activity_person_menu">个人</string>
    <string name="index_out_date">亲，不能超过预售期哦</string>
    <string name="loaddata_fail">糟糕,获取数据失败</string>
    <string name="net_service_error">系统繁忙,请稍候重试</string>
    <string name="query_ticket_fail">亲，该城市暂未开通网上售票哦</string>
    <string name="query_question_fail">空空如也,赶紧去提问吧</string>
    <string name="query_ticket_fail2">该城市暂停网络售票,请前往汽车站购票</string>
    <string name="query_ticket_fail3">该城市暂未开通网络售票,请前往汽车站购票</string>
    <string name="query_order_fail">空空如也,赶紧去买票吧</string>
    <string name="query_order_fail2">空空如也,赶紧去包车吧</string>
    <string name="query_no_history">暂无历史订单</string>
    <string name="query_passenger_fail">空空如也,立即去添加吧</string>
    <string name="query_station_fail">抱歉,没有找到您要的数据</string>
    <string name="query_train_fail">没有符合条件的车次信息</string>
    <string name="query_coupon">您还没有优惠券</string>
    <string name="query_coupon_use">您没有可用优惠券</string>
    <string name="query_station_fail4">抱歉,没有可售班次。</string>
    <string name="click_reload">点击重试</string>
    <string name="click_buy_ticket">立即购票</string>
    <string name="click_buy_newtrain">立即购票</string>
    <string name="click_buy_newticket">立即购票</string>
    <string name="click_return">点击返回</string>
    <string name="tips_login_order">亲,登陆后才能查询到订单哦</string>
    <string name="go_login">立即登录</string>
    <string name="find_new_version">发现新版本</string>
    <string name="update_now">立即更新</string>
    <string name="update_later">稍候更新</string>
    <string name="app_download_use_flow">"确定要使用移动流量下载吗？"</string>
    <string name="app_download_error">"下载出错！"</string>
    <string name="common_cancel_download">取消下载</string>
    <string name="new_version_info">最新版本:v%1$s</string>
    <string name="net_timeout_error">连接服务器超时</string>
    <string name="net_off_error">当前网络已断开,请检查网络</string>
    <string name="net_abnormal_error">网络异常</string>
    <string name="net_server_error">服务器异常</string>
    <string name="net_click_reload">点击重试</string>
    <string name="net_open_settings">启动网络</string>
    <string name="net_message_null">暂时没有任何消息</string>
    <string name="net_return_pre_page">返回上一页</string>
    <string name="net_refresh_again">刷新重试</string>
    <string name="base_activity_loading">正在努力加载ing</string>
    <string name="back">再按一次退出程序</string>
    <string name="train">火车票</string>
    <string name="bus_ticket">汽车票</string>
    <string name="bus_ticket_direct">直通车</string>
    <string name="bus_ticket_remain_time">您有订单将超时取消，请及时支付</string>
    <string name="bus_direct_city_line">直通车</string>
    <string name="bus_city_line">城际快线</string>
    <string name="bus_direct_appoint">跨城约车</string>
    <string name="bus_direct_gangao">港澳快线</string>
    <string name="bus_direct_aircraft">机场快线</string>
    <string name="bus_direct_rent_car">我要包车</string>
    <string name="bus_check_result">查询结果</string>
    <string name="bus_city_water">流水班线</string>
    <string name="ticket_know">我知道了</string>
    <string name="ticket_never_know">不再提示</string>
    <string name="ll_view_please_select">请选择出发地</string>
    <string name="ll_view_please_select_end">请选择到达地</string>
    <string name="ll_view_not_dredge">亲，%1$s暂未开通哦</string>
    <string name="bus_start_city">出发城市</string>
    <string name="bus_arrive_city">到达城市</string>
    <string name="bus_list_pop_forenoon">上午 (06:00-11:59)</string>
    <string name="bus_list_pop_noon">凌晨 (00：00-05:59)</string>
    <string name="bus_list_pop_afternoon">下午 (12:00-17:59)</string>
    <string name="bus_list_pop_night">晚上 (18:00-23:59)</string>
    <string name="bus_list_station">站点筛选</string>
    <string name="bus_list_price">价格</string>
    <string name="bus_list_time_section">发车时段</string>
    <string name="bus_list_can_sell">可售班次</string>
    <string name="bus_list_all_sell">全部班次</string>
    <string name="bus_list_pop_up_station">上\n车\n点</string>
    <string name="bus_list_pop_down_station">下\n车\n点</string>
    <string name="bus_list_pop_low">价格从高到低</string>
    <string name="bus_list_pop_improve">价格从低到高</string>
    <string name="bus_list_pop_unlimited">不限</string>
    <string name="bus_list_stop">暂停</string>
    <string name="bus_list_have_ticket">有票</string>
    <string name="bus_list_sale_all">售罄</string>
    <string name="bus_list_internet_stop">网上停售</string>
    <string name="bus_list_run_time">约%1$s小时</string>
    <string name="bus_title_time">共%1$s班次</string>
    <string name="bus_start_end">%1$s-%2$s</string>
    <string name="direct_title">查询结果</string>
    <string name="direct_business_score">%1$s分</string>
    <string name="direct_fill_service">(服务费￥%1$s)</string>
    <string name="direct_type_buy">票务类型</string>
    <string name="direct_insurance">购买保险乘客</string>
    <string name="direct_max_buy">*每个订单限购3张票</string>
    <string name="direct_fill_phone">手机号码: </string>
    <string name="direct_fill_get_ticket">取票人信息</string>
    <string name="date_today">今天</string>
    <string name="date_tomorrow">明天</string>
    <string name="date_after_tomorrow">后天</string>
    <string name="date_monday">星期一</string>
    <string name="date_tuesday">星期二</string>
    <string name="date_wednesday">星期三</string>
    <string name="date_thursday">星期四</string>
    <string name="date_friday">星期五</string>
    <string name="date_saturday">星期六</string>
    <string name="date_sunday">星期日</string>
    <string name="date_prev_day">前一天</string>
    <string name="date_next_day">后一天</string>
    <string name="train_index_start">请输入出发地</string>
    <string name="train_index_end">请输入到达地</string>
    <string name="train_index_date">请选择出发日期</string>
    <string name="train_index_only_speed">只看高铁动车</string>
    <string name="train_start_city_null">出发城市不能为空！</string>
    <string name="train_end_city_null">到达城市不能为空！</string>
    <string name="train_city_hot">热门</string>
    <string name="train_city_history">历史</string>
    <string name="train_binding_12308">绑定 12306帐号，购票成功率更高！</string>
    <string name="train_binding_account">已绑定12306账号:%s</string>
    <string name="train_binding_tips">优先使用此12306账号购票，账号错误再使用12308账号购票</string>
    <string name="train_start_hint">出发地(中文/拼音/首字母)</string>
    <string name="train_end_hint">到达地(中文/拼音/首字母)</string>
    <string name="train_list_select_type">选车型</string>
    <string name="train_list_select_seat">选座位</string>
    <string name="train_list_select_station">选站点</string>
    <string name="train_list_select_time">选时间</string>
    <string name="train_list_sure">确定</string>
    <string name="train_list_cancel">取消</string>
    <string name="train_list_station_up">出发站</string>
    <string name="train_list_station_down">到达站</string>
    <string name="train_list_start_time">发时</string>
    <string name="train_list_end_time">到时</string>
    <string name="train_list_sort">排序</string>
    <string name="train_list_only_ticket">只看有票</string>
    <string name="train_list_all_ticket">全部车票</string>
    <string name="train_list_adapter_order">站序</string>
    <string name="train_list_adapter_name">站名</string>
    <string name="train_list_adapter_arrive">到时</string>
    <string name="train_list_adapter_start">发时</string>
    <string name="train_list_adapter_wait">停留</string>
    <string name="train_list_select_high">高铁动车(G/D/C)</string>
    <string name="train_list_select_speed">特快直达(T/Z)</string>
    <string name="train_list_select_common">普通快速(K/S)</string>
    <string name="train_list_select_else">其他</string>
    <string name="train_list_type_soft">软卧</string>
    <string name="train_list_type_soft_up">软卧(下)</string>
    <string name="train_list_high_type_soft">高级软卧</string>
    <string name="train_list_hard_type">硬卧</string>
    <string name="train_list_hard_type_up">硬卧(下)</string>
    <string name="train_list_change_order">改签票不能更换出发地!</string>
    <string name="train_list_no_data">没有筛选的数据</string>
    <string name="ticket_line_up_station">上\n车\n点</string>
    <string name="ticket_line_down_station">下\n车\n点</string>
    <string name="train_station">车站</string>
    <string name="train_line_price">价格</string>
    <string name="train_line_shaixuan">筛选</string>
    <string name="train_choose_seat">选择座席</string>
    <string name="train_choose_fillin">填写订单</string>
    <string name="ins_title">乘客人身意外伤害保险</string>
    <string name="ins_select_tag">暂不购买保险</string>
    <string name="train_ins">确定购买保险</string>
    <string name="train_no_ins">暂不购买保险</string>
    <string name="train_part">%1$s/份-%2$s</string>
    <string name="train_desc">%1$s ￥%2$s/份</string>
    <string name="city_start">出发城市</string>
    <string name="city_arrive">到达城市</string>
    <string name="city_search_hint">请输入%1$s</string>
    <string name="city_get_position">暂时无法获取定位，请点击重试</string>
    <string name="city_line_hot">热门</string>
    <string name="city_line_up">上车点</string>
    <string name="city_line_down">下车点</string>
    <string name="gangao_button">查询</string>
    <string name="gangao_select_city">选择城市</string>
    <string name="aircraft_select_city">选择机场</string>
    <string name="aircraft_city">机场快线目前只开通以下城市</string>
    <string name="nac_list_title">约租车</string>
    <string name="nac_search_go_line">已开通城市</string>
    <string name="nac_service_time1">尊敬的乘客你好，您选择的出发时间不在服务范围内，请重新选择</string>
    <string name="nac_service_time2">该线路的服务时间为：</string>
    <string name="nac_overbooking">马上约车</string>
    <string name="nac_detail_sure">确认下单</string>
    <string name="nac_from_where">您从哪里出发？</string>
    <string name="nac_to_where">您要去哪里？</string>
    <string name="nac_no_go">当前城市未开通约租车服务，请选择已开通城市或其他出行方式</string>
    <string name="nac_search_condition_start">请选择出发地</string>
    <string name="nac_search_condition_end">请选择到达地</string>
    <string name="nac_no_use_coupon">暂不使用</string>
    <string name="nac_no_service">无服务时间</string>
    <string name="nac_no_start_time">请选择出发时间</string>
    <string name="nac_select_time">请选择出发时间</string>
    <string name="nac_select_end">请选择目的地</string>
    <string name="nac_select_start">请选择出发地</string>
    <string name="start_city">出发城市</string>
    <string name="arrive_city">到达城市</string>
    <string name="search_city_hint">请输入中文/全拼/拼音</string>
    <string name="passenger_add">添加乘客</string>
    <string name="passenger_select">选择乘客</string>
    <string name="passenger_modify">修改乘客</string>
    <string name="passenger_ok">确定</string>
    <string name="passenger_delete">删除</string>
    <string name="passenger_5">"亲，最多添加五位乘客哦"</string>
    <string name="passenger_3">"亲,最多可购买三张票哦!"</string>
    <string name="passenger_supplement">信息待完善请编辑补充</string>
    <string name="passenger_prompt">温馨提示</string>
    <string name="passenger_prompt_1">1.儿童票、残疾人、学生票、军人票需在车站购买</string>
    <string name="passenger_prompt_2">2.暂时仅支持身份证购票,请填写真实信息</string>
    <string name="passenger_number">手机号码</string>
    <string name="passenger_number_required">请输入您的手机号码</string>
    <string name="passenger_name_required">请输入您的真实姓名</string>
    <string name="passenger_identity_card">身份证</string>
    <string name="passenger_credentials_required">请输入您的身份证号码</string>
    <string name="passenger_required_effective">请输入有效证件号码</string>
    <string name="passenger_credentials_no">证件号码</string>
    <string name="passenger_credentials_type">证件类型</string>
    <string name="passenger_sure">确定添加</string>
    <string name="passenger_type">旅客类型</string>
    <string name="passenger_adult">成人票</string>
    <string name="passenger_edit_student">*学生票仅支持购买火车票</string>
    <string name="passenger_buy_insurance">购买保险</string>
    <string name="setting_changepsw">修改密码</string>
    <string name="setting_about12308">关于12308</string>
    <string name="setting_nocharge">免责申明</string>
    <string name="setting_userproto">用户协议</string>
    <string name="setting_lineqq">联系QQ客服</string>
    <string name="setting_logout">退出登录</string>
</resources>