<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="49dp"
              android:layout_alignParentBottom="true"
              android:background="@drawable/bg_main_menu"
              android:baselineAligned="false"
              android:orientation="horizontal"
              android:paddingBottom="3dp"
              android:paddingTop="6dp">

    <com.wxws.myticket.common.widgets.view.MenuButton
        android:id="@+id/main_menu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:menuImage="@drawable/slt_main"
        app:menuText="@string/main_activity_main_menu"/>

    <com.wxws.myticket.common.widgets.view.MenuButton
        android:id="@+id/active_menu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:menuImage="@drawable/slt_active"
        app:menuText="@string/main_activity_active_menu"/>


    <com.wxws.myticket.common.widgets.view.MenuButton
        android:id="@+id/order_menu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:menuImage="@drawable/slt_order"
        app:menuText="@string/main_activity_order_menu"/>

    <com.wxws.myticket.common.widgets.view.MenuButton
        android:id="@+id/person_menu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:menuImage="@drawable/slt_person"
        app:menuText="@string/main_activity_person_menu"/>

</LinearLayout>
