<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.wxws.myticket.common.widgets.view.ViewQueryLine
        android:id="@+id/vq_bus_direct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="22dp"
        android:paddingLeft="@dimen/margin_20px"
        android:paddingRight="@dimen/margin_20px"
        android:paddingTop="22dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_ticket_cjkx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="@dimen/margin_20px"
                android:drawableTop="@mipmap/icon_top_cjkx"
                android:text="@string/bus_city_line"
                android:textColor="@color/c_666666"
                android:textSize="@dimen/textsize_24px" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_ticket_kcyc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/margin_40px"
                android:drawablePadding="@dimen/margin_20px"
                android:drawableTop="@mipmap/icon_top_kcyc"
                android:text="@string/bus_direct_appoint"
                android:textColor="@color/c_666666"
                android:textSize="@dimen/textsize_24px" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_ticket_gakx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/margin_40px"
                android:drawablePadding="@dimen/margin_20px"
                android:drawableTop="@mipmap/icon_top_gakx"
                android:text="@string/bus_direct_gangao"
                android:textColor="@color/c_666666"
                android:textSize="@dimen/textsize_24px" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_ticket_jckx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/margin_40px"
                android:drawablePadding="@dimen/margin_20px"
                android:drawableTop="@mipmap/icon_top_jckx"
                android:text="@string/bus_direct_aircraft"
                android:textColor="@color/c_666666"
                android:textSize="@dimen/textsize_24px" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_ticket_wybc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/margin_40px"
                android:drawablePadding="@dimen/margin_20px"
                android:drawableTop="@mipmap/icon_top_wybc"
                android:text="@string/bus_direct_rent_car"
                android:textColor="@color/c_666666"
                android:textSize="@dimen/textsize_24px" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>